Fix3inCalc_killsAtCommand